# sensebee-2-backend

./: Cargo.toml  Dockerfile  LICENSE.txt  README.md  create-db.sql  docker-compose.prod.yml  docker-compose.yml  env
.sqlx/: query-134c5df05018f4365d4806f0807a315065baf0d723c714a6502324276a5f74d7.json  query-7ce95fff2f75ce902a68cd7779f37c94ff0c274949050c72d3006fed59de7566.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-938b5904e670323558eab0d663ce53e2ea64a4dd154a6b83b8ff043061272e9d.json  query-aa970ccfcb7e52ee033f3b9fd0612dd3c5752a99ef80af90500c2994594ed6f5.json  query-b1ce374a9b0b29643dde58c94a06146d39838b2ed459be9ec87658d5535c911b.json  query-c39f63244a3c4d36f882ede9e1ccf140fa2373feafcc967850b99045fae75f06.json  query-d538beddb3834e079b5814e31d355a7db8ace2af5126c0188c6e24d7766d9dea.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json  query-f6e20ce4df1be3864cfd05913106926c032659ef031832d6389323261451ab34.json  query-f9c319f779856777fc4186475a045b945c1d0a1ff6f371d11dd1d42a7b634323.json
cli/: Cargo.toml
cli/src/: cli.rs
migrations/: 20241012154321_init.down.sql  20241012154321_init.up.sql  20241103101133_senseDescr.down.sql  20241103101133_senseDescr.up.sql  20241104155015_sensPerm.down.sql  20241104155015_sensPerm.up.sql  20241112152309_pubAccess.down.sql  (+5 more)
sensor_mgmt/: Cargo.toml
sensor_mgmt/src/: lib.rs  state.rs  test_utils.rs  utils.rs
sensor_mgmt/src/authentication/: jwt_auth.rs  mod.rs  token.rs  token_cache.rs
sensor_mgmt/src/database/: mod.rs  role_db.rs  sensor_db.rs  user_db.rs
sensor_mgmt/src/database/models/: api_key.rs  db_structs.rs  mod.rs  role.rs  sensor.rs  sensor_perm.rs  user.rs
sensor_mgmt/src/features/: cache.rs  cache_sync.rs  mod.rs  sensor_data_storage.rs  user_sens_perm.rs
sensor_mgmt/src/handler/: auth_hdl.rs  cli_hdl.rs  main_hdl.rs  mod.rs  policy.rs  role_hdl.rs  sensor_hdl.rs  user_hdl.rs
sensor_mgmt/src/handler/fixtures/: roles.sql  user_roles.sql  users.sql
sensor_mgmt/src/handler/models/: requests.rs  responses.rs
server/: Cargo.toml
server/src/: main.rs
