[package]
name = "sb_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sb_cli"
path = "src/cli.rs"

[dependencies]
sensor_mgmt = { path = "../sensor_mgmt" }

async-std = { version = "1", features = ["attributes"]}
sqlx = { version = "0.8", features = ["runtime-async-std", "tls-native-tls", "migrate", "json", "postgres", "time", "chrono", "uuid" ] }
anyhow = "1.0"
env_logger = "0.10"
dotenvy = "0.15.7"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
clap = { version = "4.5.20", features = ["derive"] }
comfy-table = "7.1.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
once_cell = "1.20.2"