[package]
name = "sensor_mgmt"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-http = "3.9.0"
async-std = { version = "1", features = ["attributes"]}
sqlx = { version = "0.8", features = ["runtime-async-std", "tls-native-tls", "migrate", "json", "postgres", "time", "chrono", "uuid" ] } 
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0"
anyhow = "1.0"
log = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
rand_core = "0.6.4"
base64 = "0.22.1"
once_cell = "1.20.2"
utoipa = { version = "5.2.0", features = ["chrono", "actix_extras"] }
derive_more = { version = "1", features = ["full"] }
tokio = {version="1.42.0",features = ["full"]}

[features]
cache_sync = []
